fixed alignment of logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@ header > * {
   width: 170px;
 }
 .bird_apps_title {
-  padding: 10px 0;
   width: 160px;
   text-align: justify;
 }
